Added MAVEN_OPTS